# CAi

./: MANIFEST.in  README.md  README_zh.md  pyproject.toml  run_experiment_test.py  test_sse_stream.py
CAi/: cli.py  config.py  example.env.env  logger.py  main.py  start.md  start_zh.md
CAi/CAi_agent/: __init__.py  agent.py  agent_tags.py  base.py  context_compression.py  launch_web_ui.py  llm.py  ui.py  ui_layout.py
CAi/CAi_agent/execution/: __init__.py  bash.py  repl.py  timeout.py
CAi/CAi_agent/local_tools/: __init__.py  loader.py  section.py  spec.py
CAi/CAi_agent/prompt/: __init__.py  builder.py  section.py  sections.py
CAi/CAi_agent/skills/: README.md  __init__.py  de_novo_without_base.md  full_analog_design.md  id_protein_search.md  loader.py  molecule_analysis.md  protein_based_de_novo.md  scaffold_design.md  tools_guidance.md  unique_molecule.md  virtual_screening.md
CAi/CAi_agent/tools/: __init__.py  registry.py  repl_bridge.py  scanner.py  spec.py
CAi/CAi_agent/utilities/: __init__.py  manager.py  registry.py  section.py  spec.py
CAi/additional_tools/: __init__.py  get_skills_content.py  template_tools.py
CAi/additional_tools/server/: DOCKERFILE_MANUAL.md  Dockerfile  app.py  docker-compose.yml  gpu_manager.py
CAi/additional_tools/server/tools/libinvent/Lib-INVENT/configurations/: example.config.json
CAi/additional_tools/server/tools/libinvent/Lib-INVENT/diversity_filters/: base_diversity_filter.py  diversity_filter.py  no_filter.py
CAi/additional_tools/server/tools/libinvent/Lib-INVENT/reaction_filters/: base_reaction_filter.py  non_selective_filter.py  reaction_filter_enum.py  selective_filter.py
CAi/additional_tools/server/tools/libinvent/Lib-INVENT/running_modes/: manager.py
CAi/additional_tools/server/tools/reinvent4/: run_libinvent.py  run_mol2mol.py
CAi/additional_tools/server/tools/rxnflow/: config.json  install.sh  run.py
CAi/additional_tools/server/tools/scaffold/: config.json  environment.yml
CAi/additional_tools/server/tools/test_tool/: README.md  sample.py
CAi/additional_tools/server/tools/toxicity/: install.sh
CAi/additional_tools/server/tools/vina/: environment.yml  run.py
CAi/cli/: __init__.py  app.py  commands.py  display.py  input.py  session.py  streaming.py  theme.py
CAi/experiment/: README.md  __init__.py  datasets.py  models.py  persistence.py  runner.py  worker.py
CAi/toolkit/: __init__.py  _validators.py  client.py  skill_helpers.py
CAi/toolkit/functions/: __init__.py  evaluation.py  generation.py
CAi/toolkit/server/: DOCKERFILE_MANUAL.md  Dockerfile  app.py  docker-compose.yml  gpu_manager.py  install_all.sh  job_manager.py  tool_manager.py
CAi/toolkit/server/tools/: RESULT_SPEC.md  readme.md
CAi/toolkit/server/tools/deepchem/: config.json  environment.yml  run_molgan_generate.py  run_molgan_train.py  run_seq2seq_evaluate.py  run_seq2seq_train.py  send_request_template.py
CAi/toolkit/server/tools/drugex/: config.json  generate_molecule.py  install.sh  paths.json  run_finetune.py  run_generate.py  run_rl.py  send_request_template.py
CAi/toolkit/server/tools/fep/: _lib.py  analyze.py  config.json  prepare.py  run.py  run_legs.py
CAi/toolkit/server/tools/gromacs_runner/: config.json  run.py
CAi/toolkit/server/tools/libinvent/: config.json  environment.yml  install.sh  run.py
CAi/toolkit/server/tools/libinvent/Lib-INVENT/: README.md  download_training_datasets.py  input.py
CAi/toolkit/server/tools/libinvent/Lib-INVENT/configurations/: config.json  example.config.json
CAi/toolkit/server/tools/libinvent/Lib-INVENT/diversity_filters/: __init__.py  base_diversity_filter.py  diversity_filter.py  diversity_filter_memory.py  no_filter.py  no_filter_with_penalty.py
CAi/toolkit/server/tools/libinvent/Lib-INVENT/reaction_filters/: __init__.py  base_reaction_filter.py  non_selective_filter.py  reaction_filter.py  reaction_filter_enum.py  selective_filter.py
CAi/toolkit/server/tools/pmic/: config.json  environment.yml  install.sh  run.py
CAi/toolkit/server/tools/reinvent4/: config.json  install.sh  reinvent_generator.py  run_de_novo.py  run_libinvent.py  run_mol2mol.py
CAi/toolkit/server/tools/rxnflow/: config.json  environment.yml  install.sh  run.py
CAi/toolkit/server/tools/sc2mol/: config.json  environment.yml  run.py
CAi/toolkit/server/tools/scaffold/: config.json  environment.yml  install.sh  run.py
CAi/toolkit/server/tools/scscore/: config.json  environment.yml  install.sh  run.py
CAi/toolkit/server/tools/synllama/: config.json  environment.yml  run.py
CAi/toolkit/server/tools/test_tool/: README.md  config.json  run.py  sample.py  score.py  send_request_template.py
CAi/toolkit/server/tools/toxicity/: config.json  environment.yml  install.sh  run.py
CAi/toolkit/server/tools/vina/: config.json  environment.yml  install.sh  run.py
CAi/web_ui/: __init__.py  launch.py
CAi/web_ui/backend/: app.py  chat_service.py  conversation_store.py  deps.py  pdf_export.py
CAi/web_ui/backend/routers/: chat.py  conversations.py  files.py  utilities.py  workspace.py
CAi/web_ui/frontend/: app.js  index.html  styles.css
CAi/web_ui/frontend/js/: chat.js  conversations.js  files.js  main.js  state.js  utilities.js
base_CAi/: config.py  env_desc.py  env_desc_cm.py  utils.py
base_CAi/agent/: __init__.py  a1.py  env_collection.py  function_generator.py  qa_llm.py  react.py
base_CAi/tool/: __init__.py  database.py  literature.py  pharmacology.py  support_tools.py
docs/: architecture.md  execution.md  utilities_blueprint.md  web_ui_backend.md
example/: install_&_run.ipynb
tests/: conftest.py  test_agent_execution.py  test_agent_tags.py  test_cli_streaming.py  test_execution_bash.py  test_execution_repl.py  test_execution_timeout.py  test_llm_factory.py  test_parse_response.py  test_pdf_export.py  test_prompt_builder.py  test_prompt_building.py  test_repl_bridge.py  test_tool_registry.py  test_tool_scanner.py  test_tool_spec.py  test_toolkit_client.py  test_toolkit_validators.py  test_web_concurrency.py
tests/scripts/: inspect_prompt.py  test_utility_injection.py
(+68 files in other folders)
